# webpg

./: .gitignore  Cargo.toml  GUIDELINES.md  README.md
chat/: Cargo.toml
chat/src/: lib.rs
counter/: Cargo.toml
counter/src/: lib.rs
server/: Cargo.toml
server/assets/base/: index.css
server/assets/routes/chat/: index.css  index.js
server/assets/routes/index/: index.css  index.js
server/assets/routes/todo/: index.css
server/src/: cert.rs  chat.rs  db.rs  error.rs  main.rs  routes.rs
server/templates/components/: chat_message.html  navbar.html  todo_item.html
server/templates/layouts/: app.html
server/templates/pages/: chat.html  index.html  todo.html
