[package]
name = "webpg-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
chrono.workspace = true
pem.workspace = true
rcgen.workspace = true
rustls.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
